# Frida2.0

./: .gitignore  Dockerfile  Script-30.sql  config.py  crud.py  databases.py  docker-compose.yml  funcs.py  init.sql  main.py  mistral.py  pyproject.toml  req.txt  requirements.txt  scheme.py  test.py
bot/: config.py  dispatcher.py  handlers.py  main.py  utils.py
bot/api/: ai.py  auth.py  base.py  loaddata.py  log.py  milvus.py  mistral.py
bot/handlers/: __init__.py  add_topic.py  file_handler.py  general.py  help.py  inline_mode.py  loaddata.py  models.py  start.py  tariff_handler.py  voice_handler.py
bot/utils/: decorators.py  helpers.py  logger.py  states.py  user_settings.py
milvus/: crud.py  milvus.py
