[project]
name = "fridabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.18.0",
    "apscheduler>=3.11.0",
    "debugpy>=1.8.13",
    "mistralai>=1.5.1",
    "mysql-connector-python>=9.2.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pymilvus>=2.5.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "transformers>=4.49.0",
    "unidecode>=1.3.8",
    "xlrd>=2.0.1",
]
