[project]
name = "fridabot"
version = "0.1.0"
description = "Intelligent Telegram bot with AI-powered knowledge base integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Frida Development Team"}
]
keywords = ["telegram", "bot", "ai", "knowledge-base", "mistral", "milvus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiogram>=3.18.0",
    "apscheduler>=3.11.0",
    "mistralai>=1.5.1",
    "mysql-connector-python>=9.2.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pymilvus>=2.5.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "transformers>=4.49.0",
    "unidecode>=1.3.8",
    "xlrd>=2.0.1",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.13",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "sentence_transformers.*",
    "transformers.*",
    "mistralai.*",
    "mysql.connector.*",
    "psycopg2.*",
    "docx.*",
    "PyPDF2.*",
    "unidecode.*",
    "xlrd.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bot --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[project.scripts]
fridabot = "bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
